<resources>
    <string name="app_name">WorkEight</string>
    <string name="txt_item_title">hosigus nb!</string>
    <string name="txt_item_user">wtnl</string>
    <string name="txt_item_time">2019.12.8</string>
    <string name="txt_item_image_title">hosigus nb!</string>
    <string name="txt_item_image_user">wtnl</string>
    <string name="txt_item_image_time">2019.12.8</string>
    <string name="img_item_image">img_item_image</string>
    <string name="txt_item_load">正在加载</string>
    <string name="txt_top_title">Hi,goodEvening!</string>
    <string name="txt_top_time">txt_top_time</string>
</resources>
