<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_item_image_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_item_image_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="10dp" />

    <ImageView
        android:id="@+id/img_item_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/img_item_image"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toEndOf="@+id/txt_item_image_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_item_image_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_item_user"
        android:textSize="18sp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/img_item_image"
        app:layout_constraintStart_toStartOf="@id/txt_item_image_title"/>

    <TextView
        android:id="@+id/txt_item_image_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_item_time"
        android:textSize="18sp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toEndOf="@+id/txt_item_image_user"
        app:layout_constraintTop_toBottomOf="@id/img_item_image"/>

</android.support.constraint.ConstraintLayout>